<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_nav_accueil"
        android:title="@string/acceuil"
        android:icon="@drawable/acceuil"
        android:checked="true"
        android:iconTint="@color/black"/>

    <item
        android:id="@+id/bottom_nav_marchands"
        android:title="@string/mes_marchands"
        android:icon="@drawable/marchands_icon"
        android:iconTint="@color/black"/>

    <item
        android:id="@+id/bottom_nav_discussion"
        android:title="@string/discussion"
        android:icon="@drawable/ic_chat"
        android:iconTint="@color/black"/>

    <item
        android:id="@+id/bottom_nav_profil_supermarchand"
        android:title="@string/mon_profil"
        android:icon="@drawable/ic_person"
        android:iconTint="@color/black"/>


</menu>