<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/numero_contrat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            style="@style/TextAppearance.AppCompat"
            android:textStyle="bold"
            android:textColor="@color/black_background"
            android:text="@string/policy_number"
            android:layout_marginBottom="6dp"/>

        <TextView
            android:id="@+id/montant_paye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:text="@string/_1000_fcfa"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nom_prenom_clent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            style="@style/TextAppearance.AppCompat"
            android:text="@string/nom_prenom"/>

        <TextView
            android:id="@+id/date_paiement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:layout_marginStart="10dp"
            style="@style/TextAppearance.AppCompat"
            android:text="@string/date_paiement"
            android:layout_marginLeft="10dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        android:layout_marginTop="10dp"/>

</LinearLayout>