<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.Welcome">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:textColor="@color/text_black"
        android:textSize="19sp"
        android:fontFamily="@font/time_new_roman"
        android:textAlignment="center"
        style="@style/TextAppearance.AppCompat"
        android:text="@string/lorem"
        android:layout_marginTop="35dp"/>

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@mipmap/logo2"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/se_connecter"
            android:textSize="18sp"
            android:background="@drawable/gradiant_green"
            android:elevation="40dp"
            android:textColor="@color/white"
            android:id="@+id/validate"
            android:textAllCaps="false"
            android:onClick="connexion" />

        <androidx.legacy.widget.Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/visiter"
            android:textSize="18sp"
            android:textColor="@color/text_black"
            android:elevation="40dp"
            android:background="@drawable/message_button"
            android:textAllCaps="false"
            android:onClick="visiter"/>

    </LinearLayout>

</RelativeLayout>