<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mask="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        style="@style/TextAppearance.AppCompat"
        android:text="@string/ajout_d_un_paiement_de_prime"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/input_border"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:id="@+id/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:textStyle="bold"
        style="@style/TextAppearance.AppCompat"
        android:textColor="@color/red_active"
        android:text=""
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                style="@style/TextAppearance.AppCompat"
                android:text="@string/reference_du_contrat"/>

            <EditText
                android:id="@+id/reference_contat"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint=""
                android:layout_marginBottom="5dp"
                android:inputType="text"
                android:lines="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                style="@style/TextAppearance.AppCompat"
                android:text="@string/montant"/>

            <EditText
                android:id="@+id/montant_paye"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:drawablePadding="15dp"
                android:layout_marginBottom="5dp"
                android:inputType="number"
                android:lines="1"/>

        </LinearLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/validate"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/button_border"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/valider"
        android:textSize="16sp"
        android:textAllCaps="false"/>


</LinearLayout>