<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.visiteur.Accueil"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black_background"
        style="@style/TextAppearance.AppCompat"
        android:layout_marginStart="15dp"
        android:text="Notre produit"
        android:textAllCaps="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp" />

    <androidx.cardview.widget.CardView
        android:layout_gravity="start"
        android:layout_height="200dp"
        android:layout_width="match_parent"
        app:cardElevation="20dp"
        app:cardCornerRadius="10dp"
        android:layout_margin="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@mipmap/funeral"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/black_transparent"
                android:layout_alignParentBottom="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="3dp"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:text="@string/assurance_d_c_s"/>

            </RelativeLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textAllCaps="true"
        android:textColor="@color/black_background"
        style="@style/TextAppearance.AppCompat"
        android:layout_marginStart="15dp"
        android:text="@string/nos_services"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp" />

    <GridLayout android:layout_width="match_parent"
        android:layout_height="170dp"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="horizontal"
        android:columnCount="2"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <androidx.cardview.widget.CardView
            android:layout_gravity="start"
            android:layout_height="120dp"
            android:layout_width="250dp"
            app:cardElevation="30dp"
            app:cardCornerRadius="10dp"
            android:layout_margin="15dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="8dp"
                    android:tint="@color/black"
                    app:srcCompat="@drawable/ic_home_red"
                    tools:ignore="VectorDrawableCompat" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="20dp"
                    android:text="@string/immobilier"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_gravity="start"
            android:layout_height="120dp"
            android:layout_width="250dp"
            app:cardElevation="20dp"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            app:cardBackgroundColor="@color/black">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="8dp"
                    android:tint="@color/white"
                    app:srcCompat="@drawable/ic_shop"
                    tools:ignore="VectorDrawableCompat" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="20dp"
                    android:text="@string/funeral"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textAllCaps="true"
        android:textColor="@color/black_background"
        style="@style/TextAppearance.AppCompat"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:text="@string/notre_boutique"
        android:layout_marginLeft="15dp"/>

    <include layout="@layout/fragment_liste_produit"/>



</LinearLayout>