<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragment.marchand.AddClientStepFour"
    android:layout_margin="15dp"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:tint="@color/colorGreen"
                    app:srcCompat="@drawable/circular_background" />


                <View
                    android:layout_width="90dp"
                    android:layout_height="1.5dp"
                    android:layout_gravity="center"
                    android:background="@color/grayPale" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:tint="@color/colorGreen"
                    app:srcCompat="@drawable/circular_background" />


                <View
                    android:layout_width="90dp"
                    android:layout_height="1.5dp"
                    android:layout_gravity="center"
                    android:background="@color/grayPale" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:tint="@color/colorGreen"
                    app:srcCompat="@drawable/circular_background" />


                <View
                    android:layout_width="90dp"
                    android:layout_height="1.5dp"
                    android:layout_gravity="center"
                    android:background="@color/grayPale" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:tint="@color/colorMoreGreen"
                    app:srcCompat="@drawable/timeline_active" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_confirm"
                android:tint="@color/colorGreen"
                android:layout_gravity="center"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="80dp" />

            <TextView
                android:id="@+id/confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/confirmation"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/texte_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Confirmer, l'enregistration des données,..."
                android:textSize="16sp"
                android:layout_marginTop="15dp"
                style="@style/TextAppearance.AppCompat"/>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">

        <Button
            android:id="@+id/annuler"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/annuler"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:background="@drawable/button_cancel"/>

        <Button
            android:id="@+id/suivant"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/valider"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:layout_alignParentEnd="true"
            android:background="@drawable/button_next"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

</RelativeLayout>